// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render successfully 1`] = `
<body>
  <div>
    <div
      class="flex items-center p-4 mb-4 text-sm rounded-lg text-blue-800 bg-blue-50 "
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="flex-shrink-0 inline w-4 h-4 mr-3"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"
        />
      </svg>
      <span
        class="sr-only uppercase"
      >
        info
      </span>
      <div>
        <span
          class="font-bold"
        />
         
        Hello
      </div>
    </div>
  </div>
</body>
`;

exports[`Alert should render successfully with title 1`] = `
<body>
  <div>
    <div
      class="flex items-center p-4 mb-4 text-sm rounded-lg text-blue-800 bg-blue-50 "
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="flex-shrink-0 inline w-4 h-4 mr-3"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"
        />
      </svg>
      <span
        class="sr-only uppercase"
      >
        info
      </span>
      <div>
        <span
          class="font-bold"
        >
          Title
        </span>
         
        Hello
      </div>
    </div>
  </div>
</body>
`;
